--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ bold-strong-->
   <body>
     <TABLE CELLSPACING="20">
       <TR>
-        <TD><img src="IMG20221229143209.jpg" height="360" width="340" alt="sinega profile picture"></TD>
+        <TD><img src="wbp1.png" height="360" width="340" alt="sinega profile picture"></TD>
         <TD><H1>SINEGA NAIDU</H1>
           <p><em>Founder and Writer<a href="https://www.instagram.com/her_thoughts356/"><strong>@her_thoughts356</strong></em><a><em><p>
           <P>Student at <a href="https://jaipur.manipal.edu/">MUJ</a></P></TD>
